--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,12 @@ COLORS
 
 /* Makes the top nav pink */
 .bg-dark {
-  background: #E91E63!important;
+  /*background: #E91E63!important;*/
+  background: #d7598b!important;
+}
+
+footer.py-5 {
+  background: #454545!important;
 }
 
 .card-text {
@@ -17,12 +22,12 @@ COLORS
 }
 
 .card-footer {
-  background: #E91E63;
+  background: #d7598b;
 }
 
 .card-title {
   font-weight: bold;
-  color: #E91E63;
+  color: #454545;
 }
 
 .btn {
