--- a/css/styles.css
+++ b/css/styles.css
@@ -1,24 +1,42 @@
 /*
 
 COLORS
-#E91E63:dark pink
-#8BC34A:green
+#D7598B:pink
+#8BC24A:dark green
+#E4FFA3:light green
 #ffffff:white
+#454545:very dark grey
 
 */
 
-/* Makes the top nav pink */
 .bg-dark {
-  /*background: #E91E63!important;*/
-  background: #d7598b!important;
+  background: #D7598B!important; /*Makes top nav pink */
 }
 
 footer.py-5 {
-  background: #454545!important;
+  background: #E4FFA3!important; /*Makes footer light green */
+  border-top: 2px solid #8BC24A;
+  line-height: 1.5em;
 }
 
+p.footerinfo {
+  margin-bottom: 20px!important;
+  font-size: 1em;
+}
+
+a.googlemap {
+  text-decoration: underline;
+}
+
+a.googlemap:hover {
+  color: #454545;
+}
 .card-text {
   font-size: 1.2em;
+}
+
+.card-body {
+  background: #E4FFA3;
 }
 
 .card-footer {
@@ -32,40 +50,47 @@ footer.py-5 {
 
 .btn {
   color: #fff!important;
-  font-size: 1.5em;
+  font-size: 1.2em;
 }
 
 .smalldogs {
   background: #8BC34A;
 }
 
-p.footerinfo {
-  margin-bottom: 20px!important;
-}
-
-a.googlemap {
-  color: #ffffff;
-  text-decoration: underline;
-}
-
-iframe {
-  border: 5px solid white;
-  margin-top: 50px;
-}
-
 .outside {
-  border: 5px solid white;
-}
-
-.cta {
-  background: #8BC34A;
-  color: #000;
+  border: 3px solid #8BC24A;
 }
 
 .address {
-  font-size: 1.2em;
+  font-size: 1.35em;
+  margin-bottom: 20px;
+  letter-spacing: 1px;
 }
 
-hr {
-  border-top: 6px dotted white;
+.greektitle {
+  font-size: 1.6em;
+}
+
+/* Nav bar */
+a:hover {
+  color: #fff;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.fa {
+  color: #E4FFA3;
+  margin-left: 10px;
+}
+
+.fa:hover {
+  color: #fff;
+}
+
+.language {
+  color: #E4FFA3;
+}
+
+body > nav {
+  height: 60px;
 }
